@@ -3,6 +3,8 @@
 - Fixed precision calculation on decimal and newdecimal columns (bug #48171)
 - Fixed problem caused by us not including a 'REFERENCED_TABLE_CATALOG' column in our
   foreign keys collection (bug #48974)
+- fixed entity framework function processing so that it handles stored functions properly
+  (bug #45277)
 
 Version 6.0.5
 - ensure that MySqlPacket always has a valid encoding. This prevents null reference exceptions in ReadString()
